<RelativeLayout android:id="@+id/display_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eee">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/namePlaceholder"
        android:id="@+id/building_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:textAlignment="center"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:background="#eee"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_start_conversation"
        android:id="@+id/feedback_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/feedback_icon_accessibility" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/purpose_placeholder"
        android:id="@+id/building_purpose"
        android:layout_below="@+id/building_name"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/hoursPlaceholder"
        android:id="@+id/building_hours"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_below="@+id/building_purpose"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/website_string"
        android:id="@+id/building_website"
        android:textColor="#000"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_below="@+id/building_hours"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:autoLink="web" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_string"
        android:id="@+id/building_description"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:layout_below="@+id/building_website"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
</RelativeLayout>