<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/display_building_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#03a9f4"
    android:animateLayoutChanges="true"
              android:elevation="1dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:elevation="2dp"
        android:background="@drawable/rectangle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/building_name"
            android:id="@+id/building_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hours"
        android:elevation="2dp"
        android:background="@drawable/rectangle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/building_layout_hours"
            android:id="@+id/building_layout_hours"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:textAlignment="textEnd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/building_hours"
            android:id="@+id/building_hours"
            android:layout_alignTop="@+id/building_layout_hours"
            android:layout_toRightOf="@+id/building_layout_hours"
            android:layout_toEndOf="@+id/building_layout_hours"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:textAlignment="textStart"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/website"
        android:elevation="2dp"
        android:background="@drawable/rectangle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/building_layout_website"
            android:id="@+id/building_layout_website"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:textAlignment="textEnd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/building_website"
            android:id="@+id/building_website"
            android:layout_toRightOf="@+id/building_layout_website"
            android:layout_toEndOf="@+id/building_layout_website"
            android:paddingLeft="0dp"
            android:padding="10dp"
            android:autoLink="web"
            android:textAlignment="textStart" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:elevation="2dp"
        android:background="@drawable/rectangle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="1dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/building_layout_phone"
            android:id="@+id/building_layout_phone"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="0dp"
            android:textAlignment="textEnd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/building_phone"
            android:id="@+id/building_phone"
            android:padding="10dp"
            android:layout_alignTop="@+id/building_layout_phone"
            android:layout_toRightOf="@+id/building_layout_phone"
            android:autoLink="phone"
            android:textAlignment="textStart"
            />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/notes_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="2dp"/>


</LinearLayout>
