<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/feedback_building_name"
        android:id="@+id/feedback_building_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/feature_selection_hint"
        android:id="@+id/feature_hint"
        android:layout_below="@+id/feedback_building_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feature_select"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:entries="@array/info_content"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/feature_hint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="20dp"/>

    <View style="@style/Divider"
        android:layout_below="@+id/feature_select"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_entry_hint"
        android:id="@+id/user_feedback_hint"
        android:layout_below="@+id/feature_select"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_feedback_input"
        android:layout_below="@+id/user_feedback_hint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:editable="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_feedback_button"
        android:id="@+id/submit_feedback"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/user_feedback_input"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>